<resources>
    <string name="app_name">libraryUI</string>
    <string name="create_operator">Create operator</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="menu_text">Menu</string>
    <string name="add_new_book_text">Add new book</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="add_operator">Add operator</string>
    <string name="add">Add</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name" />
    <string name="email" />
    <string name="user_name" />
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="inventory_number">Inventory number</string>
    <string name="title">Title</string>
    <string name="author_name">Author name</string>
    <string name="book_name">Book name</string>
    <string name="birth_place">Birth Place</string>
    <string name="biography">Biography</string>
    <string name="birth_date">Birth Date</string>
    <string name="rent_book">Rent book</string>
    <string name="return_book">Return book</string>
    <string name="discard">Discard</string>
    <string name="archive">Archive</string>
    <string name="work_form">WorkForm</string>
    <string name="genre">Genre</string>
    <string name="publish_year">Publish Year</string>
    <string name="search_authors">Search authors</string>
    <string name="add_book">Add Book</string>
    <string name="add_reader">Add Reader</string>
    <string name="rent_book_btn">Rent Book</string>
    <string name="search_genres">Search genres</string>
    <string name="publisher">Publisher</string>
    <string name="search_publisher">Search publisher</string>
    <string name="book_serie_optional">Book serie (Optional)</string>
    <string name="search_book_serie">Search book serie</string>
    <string name="search_characteristic">Search characteristic</string>
    <string name="characteristic">Characteristic</string>
    <string name="change_name">Change name</string>
    <string name="search_work_form">Search work form</string>
    <string name="book">Book</string>
    <string name="reader">Reader</string>
    <string name="search_reader">Search reader</string>
    <string name="search_book">Search book</string>
    <string name="name">Name</string>
    <string name="rent_types_spinner">Rent types spinner</string>
    <string name="return_deadline">Return deadline</string>
    <string name="receivable_date">Receivable date</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="change">Change</string>
    <string name="archive_book">Archive book</string>
</resources>
