<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.OperatorMenu"

    >

    <TextView
        android:id="@+id/menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/menu_text"
        android:textColor="#104073"
        android:textSize="26sp" />

    <Button
        android:id="@+id/add_reader_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#104073"
        android:text="@string/add_reader"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/add_new_book_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#104073"
        android:text="@string/add_book"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/rent_book_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#104073"
        android:text="@string/rent_book_btn"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/archive_book_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#104073"
        android:text="@string/archive_book"
        android:textColor="#FFFFFF" />


</androidx.appcompat.widget.LinearLayoutCompat>
