<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.AddEditAuthor">

    <EditText
        android:id="@+id/author_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginTop="70dp"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/birth_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_date"
        android:inputType="date"
        android:autofillHints="" />

    <EditText
        android:id="@+id/birth_place"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_place"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/biography"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/biography"
        android:inputType="textMultiLine"
        android:lines="5"
        android:autofillHints="" />
    <Button
        android:id="@+id/add_author_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#104073"
        android:text="@string/add"
        android:textColor="#FFFFFF" />
    <Button
        android:id="@+id/update_author_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#104073"
        android:text="@string/add"
        android:textColor="#FFFFFF" />

</androidx.appcompat.widget.LinearLayoutCompat>