<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.AddEditBookRent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <EditText
            android:id="@+id/book_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/book"
            android:inputType="text"
            android:textIsSelectable="true" />

        <ImageButton
            android:id="@+id/book_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/search"
            android:contentDescription="@string/search_book"
            android:scaleType="fitXY" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <EditText
            android:id="@+id/reader_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/reader"
            android:inputType="text"
            android:textIsSelectable="true" />

        <ImageButton
            android:id="@+id/reader_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/search"
            android:contentDescription="@string/search_reader"
            android:scaleType="fitXY" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <Spinner
            android:id="@+id/book_rent_types_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rent_types_spinner" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <EditText
            android:id="@+id/receivable_date_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/receivable_date"
            android:inputType="date"
            android:textIsSelectable="true" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <EditText
            android:id="@+id/return_dead_line_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/return_deadline"
            android:inputType="date"
            android:textIsSelectable="true" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/rent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="5dp"
        android:height="10dp"
        android:backgroundTint="#104073"
        android:text="@string/rent_book"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#104073"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>
</androidx.appcompat.widget.LinearLayoutCompat>